Fixed spacing bug

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -736,7 +736,7 @@ thead.problemtable {
 }
 
 .row > * {
-    margin: 0 !important;
+    margin: 0;
     padding: 0 !important;
 }
 
